# ai-daily-standup

./: README.md  pyproject.toml
ai_daily_standup/: __init__.py
aids/: cli.py  ollama.py
tests/: __init__.py  test_cli.py  test_daily_standup.py  test_ollama.py
