[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-daily-standup"
version = "1.0.0"
description = "AI-powered daily standup generator from git activity using local LLMs via Ollama"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["httpx>=0.27", "typer>=0.12", "rich>=13.0"]

[project.scripts]
ai-daily-standup = "ai_daily_standup:app"
